--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "TypeBlitz",
   "short_name": "TypeBlitz",
-  "description": "TypeBlitz - an easy-to-use, cutting-edge application designed for beginners and experienced typists alike. Enhance your typing skills and increase your speed.",
+  "description": "TypeBlitz - A user-friendly, innovative application designed for both beginners and experienced typists. Boost your typing speed and accuracy with cutting-edge features.",
   "icons": [
     {
       "src": "assets/images/img/TypeBlitz-128.png",
@@ -25,5 +25,8 @@
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#ffffff"
+  "theme_color": "#4CAF50",
+  "orientation": "portrait",
+  "scope": "/",
+  "lang": "en"
 }
